# flipper-pc-monitor-backend

./: Cargo.toml  README.md
.github/workflows/: push.yml  release.yml  rust.yml
src/: flipper_manager.rs  helpers.rs  main.rs  system_info.rs
