[package]
name = "flipper-pc-monitor-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
btleplug = "0.10.5"
futures = "0.3.28"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
sysinfo = "0.29.2"
tokio = { version = "1.28.2", features = ["full"] }
uuid = "1.4.0"
xmltojson = { git = "https://github.com/rtyler/xmltojson", version = "0.1.3" }
